--- a/KhongMinhKhiem_LAB456/Content/Site.css
+++ b/KhongMinhKhiem_LAB456/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+/*Override the default bootstrap Nar*/
+.navbar-inverse{
+    background-color: #d41d50;
+    border-color: #fbf6f6:
+}
+.navbar-inverse .navbar-nav > li >a {
+    color: black;
+}
+.navbar-inverse .navbar-brand {
+    color: black;
+}
