--- a/KhongMinhKhiem_LAB456/Views/Courses/Create.cshtml
+++ b/KhongMinhKhiem_LAB456/Views/Courses/Create.cshtml
@@ -27,7 +27,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Category)
         @Html.DropDownListFor(m => m.Category,
-                   new SelectList(Model.Categories,"Id", "Name"), "", new { @lass = "form-control" })
+                   new SelectList(Model.Categories,"Id", "Name"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Category)
     </div>
     <button type="submit" value="Save" class="btn btn-primary">Save</button>
