--- a/KhongMinhKhiem_LAB456/Content/Site.css
+++ b/KhongMinhKhiem_LAB456/Content/Site.css
@@ -25,7 +25,7 @@ textarea {
 /*Override the default bootstrap Nar*/
 .navbar-inverse{
     background-color: #d41d50;
-    border-color: #fbf6f6:
+    border-color: white;
 }
 .navbar-inverse .navbar-nav > li >a {
     color: black;
@@ -33,3 +33,32 @@ textarea {
 .navbar-inverse .navbar-brand {
     color: black;
 }
+/*Course layout*/
+.course{
+    list-style: none;
+}
+.course > li{
+    position: relative;
+    margin-bottom: 30px;
+}
+.course > li .date {
+    text-align: center;
+    background-color: #d41d50;
+    color: #fbf6f6;
+    width: 60px;
+    border-radius: 8px;
+}
+.course > li .details {
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
+.course > li .action {
+    display: none;
+    left: 70px;
+    position: absolute;
+
+}
+.course > li:hover .action{
+    display: block;
+} 
