--- a/KhongMinhKhiem_LAB456/Views/Courses/Mine.cshtml
+++ b/KhongMinhKhiem_LAB456/Views/Courses/Mine.cshtml
@@ -27,6 +27,9 @@
                 </span>
             </div>
         </li>
-
+        <div class="action">
+            <a href="">Edit</a>
+            <a href="">Delete</a>
+        </div>
     }
 </ul>
