--- a/KhongMinhKhiem_LAB456/Views/Courses/Attending.cshtml
+++ b/KhongMinhKhiem_LAB456/Views/Courses/Attending.cshtml
@@ -1,4 +1,4 @@
-﻿@model KhongMinhKhiem_LAB456.ViewModels.CourseViewModel
+﻿@model KhongMinhKhiem_LAB456.ViewModels.CoursesViewModel
 
 @{
     ViewBag.Title = "Attending";
@@ -8,8 +8,9 @@
 <h2>Attending</h2>
 
 <ul class="course">
-    @foreach (var course in Model.UpcomingCourses)
+    @foreach (var course in Model.UpcommingCourses)
     {
+
         <li>
             <div class="date">
                 <div class="month">
@@ -24,27 +25,24 @@
                     @course.Lecturer.Name
                     @if (Model.ShowAction)
                     {
+
                         <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">Follow?</button>
                     }
                 </span>
                 <span class="category">
                     @course.Category.Name
                 </span>
-                @if (Model.ShowAction)
-                {
-                    <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">Going?</button>
-                }
             </div>
         </li>
     }
 </ul>
 @section scripts
-        {
+{
     <script>
-            $(document).ready(function () {
-                $(".js-toggle-attendance").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/attendances", { courseId: button.attr("data-course-id") })
+        $(document).ready(function () {
+            $(".js-toggle-attendance").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendances", { courseId: button.attr("data-course-id") })
                     .done(function () {
                         button
                             .removeClass("btn-default")
@@ -54,17 +52,17 @@
                     .fail(function () {
                         alert("Something failed!");
                     });
-                });
-                $(".js-toggle-follow").click(function (e) {
-                    var button = $(e.target);
-                    $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+            });
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
                     .done(function () {
                         button.text("Following");
                     })
                     .fail(function () {
                         alert("Something failed!");
                     });
-                });
             });
+        });
     </script>
 }
