--- a/KhongMinhKhiem_LAB456/Views/Courses/Create.cshtml
+++ b/KhongMinhKhiem_LAB456/Views/Courses/Create.cshtml
@@ -6,9 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create", "Courses"))
+@using (Html.BeginForm(Model.Action, "Courses"))
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "form-control" })
@@ -27,7 +28,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Category)
         @Html.DropDownListFor(m => m.Category,
-                   new SelectList(Model.Categories,"Id", "Name"), "", new { @class = "form-control" })
+                   new SelectList(Model.Categories, "Id", "Name"), "", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Category)
     </div>
     <button type="submit" value="Save" class="btn btn-primary">Save</button>
